Fix anchors overlapping switch, reduce sizes

--- a/styles/home/Navbar.module.css
+++ b/styles/home/Navbar.module.css
@@ -33,7 +33,8 @@
 }
 
 .navbar-anchor-box {
-  margin-left: 30px;
+  margin-left: 20px;
+  margin-right: 140px;
 }
 
 .navbar-anchor {
@@ -41,11 +42,10 @@
   color: white;
   font-weight: bold;
   cursor: pointer;
-  padding: 5px 20px;
+  padding: 5px 10px;
   transition: all 0.3s ease-in-out;
   border-radius: 8px;
   position: relative;
-  margin-left: 10px;
 }
 
 .navbar-anchor::before {
@@ -85,8 +85,8 @@
 
 .switch {
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 30px;
+  height: 17px;
 }
 
 .switch-label {
@@ -116,23 +116,23 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 3px;
   background-color: purple;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px);
 }
 
 .slider.round {
-  border-radius: 34px;
+  border-radius: 17px;
 }
 
 .slider.round:before {
